# FEcommerce

./: .env.example  .gitignore  pyproject.toml  server.py
app/: main.py
app/config/: database.py
app/events/: userevents.py
app/middlewares/: cors.py
app/migrations/: env.py
app/migrations/versions/: 253382496c2e_.py  3a0dba96ab8e_created_prdocut_category_model.py  6eaa34be70fb_product_gallery_creatred.py  a5388a16da3e_created_cart_and_order_table.py  a9a1e27ba40d_created_product_gallery.py  b8621d5656a3_create_user_table.py  b8fe908f9c4a_updated_reverse_realtions.py  ef657890145c_remove_is_active_from_the_category.py
app/models/: User.py  __init__.py  base.py  order.py  products.py
app/routers/: OrderRouter.py  UserRouter.py  cartRouter.py  categoryRouter.py  productRouter.py  productsRouter.py
app/schemas/: Users.py  base.py  cart.py  jwt_token.py  order.py  products.py
app/services/: cart_services.py  categoryServices.py  order_services.py  productServices.py  product_service.py  user_services.py  userservices.py
app/utils/: file_handler.py  jwt_auth.py
user/: .gitignore  requirements.txt
user/app/: main.py
user/app/config/: cors.py  database.py
user/app/errors/: errorHandlers.py
user/app/migrations/: env.py
user/app/migrations/versions/: 347b60bb5f8a_added_token_relationship.py  b1f01a453e21_refoectored_to_the_base_class.py
user/app/models/: __init__.py  base.py  customer.py
user/app/routers/: user_routers.py
user/app/schemas/: Base.py  user_schema.py
user/app/services/: user_services.py
